--- a/cognito-api-gateway-lambda-esbuild/package.json
+++ b/cognito-api-gateway-lambda-esbuild/package.json
@@ -18,6 +18,7 @@
     "typescript": "~4.8.4"
   },
   "dependencies": {
+    "@aws-cdk/core": "^1.180.0",
     "@mrgrain/cdk-esbuild": "^3.11.3",
     "aws-cdk-lib": "2.50.0",
     "constructs": "^10.1.149",
