--- a/cognito-api-gateway-lambda-esbuild/tsconfig.json
+++ b/cognito-api-gateway-lambda-esbuild/tsconfig.json
@@ -21,7 +21,8 @@
     "strictPropertyInitialization": false,
     "typeRoots": [
       "./node_modules/@types"
-    ]
+    ],
+    "forceConsistentCasingInFileNames": true
   },
   "exclude": [
     "node_modules",
