add other commands

--- a/cognito-api-gateway-lambda-esbuild/Makefile
+++ b/cognito-api-gateway-lambda-esbuild/Makefile
@@ -1,5 +1,47 @@
-.PHONY: deploy-development
-deploy-development:
-	export APP_CONFIG=config/app-config-demo.json && \
-	sh script/setup_initial.sh config/app-config-demo.json && \
-	sh script/destroy_stacks.sh config/app-config-demo.json
+.PHONY: setup_initial-development
+setup_initial-development:
+	sh script/setup_initial.sh src/config/app-config-development.json
+
+.PHONY: deploy_stacks-development
+deploy_stacks-development:
+	sh script/deploy_stacks.sh src/config/app-config-development.json
+
+.PHONY: destroy_stacks-development
+destroy_stacks-development:
+	sh script/destroy_stacks.sh src/config/app-config-development.json
+
+.PHONY: setup_initial-integration
+setup_initial-integration:
+	sh script/setup_initial.sh src/config/app-config-integration.json
+
+.PHONY: deploy_stacks-integration
+deploy_stacks-integration:
+	sh script/deploy_stacks.sh src/config/app-config-integration.json
+
+.PHONY: destroy_stacks-integration
+destroy_stacks-integration:
+	sh script/destroy_stacks.sh src/config/app-config-integration.json
+
+.PHONY: setup_initial-staging
+setup_initial-staging:
+	sh script/setup_initial.sh src/config/app-config-staging.json
+
+.PHONY: deploy_stacks-staging
+deploy_stacks-staging:
+	sh script/deploy_stacks.sh src/config/app-config-staging.json
+
+.PHONY: destroy_stacks-staging
+destroy_stacks-staging:
+	sh script/destroy_stacks.sh src/config/app-config-staging.json
+
+.PHONY: setup_initial-production
+setup_initial-production:
+	sh script/setup_initial.sh src/config/app-config-staging.json
+
+.PHONY: deploy_stacks-production
+deploy_stacks-production:
+	sh script/deploy_stacks.sh src/config/app-config-production.json
+
+.PHONY: destroy_stacks-production
+destroy_stacks-production:
+	sh script/destroy_stacks.sh src/config/app-config-production.json
