--- a/cognito-api-gateway-lambda-esbuild/src/configurations/app-config-development.json
+++ b/cognito-api-gateway-lambda-esbuild/src/configurations/app-config-development.json
@@ -2,9 +2,9 @@
     "Project": {
         "Name": "CL_CDK_For_X",
         "Stage": "development",
-        "Account": "75157*******",
+        "Account": "693573057868",
         "Region": "eu-central-1",
-        "Profile": "cdk-demo"
+        "Profile": "facial_dev_devops"
     },
 
     "Stack": {
