--- a/cognito-api-gateway-lambda-esbuild/src/configurations/app-config-development.json
+++ b/cognito-api-gateway-lambda-esbuild/src/configurations/app-config-development.json
@@ -1,6 +1,6 @@
 {
     "Project": {
-        "Name": "CL_CDK_For_X",
+        "Name": "CLApp",
         "Stage": "development",
         "Account": "693573057868",
         "Region": "eu-central-1",
