fix relation file path

--- a/cognito-api-gateway-lambda-esbuild/src/configurations/app-config-development.json
+++ b/cognito-api-gateway-lambda-esbuild/src/configurations/app-config-development.json
@@ -4,6 +4,7 @@
         "Stage": "development",
         "Account": "693573057868",
         "Region": "eu-central-1",
+        "Region2": "ap-southeast-1",
         "Profile": "facial_dev_devops"
     },
 
