--- a/cognito-api-gateway-lambda-esbuild/tsconfig.json
+++ b/cognito-api-gateway-lambda-esbuild/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ES2018",
+    "target": "es2020",
     "module": "commonjs",
     "lib": [
-      "es2018"
+      "es2020"
     ],
     "declaration": true,
     "strict": true,
