arm64 for lambda functions

--- a/cognito-api-gateway-lambda-esbuild/cdk.out/CLAppdevelopment-BackendLambdaStack.template.json
+++ b/cognito-api-gateway-lambda-esbuild/cdk.out/CLAppdevelopment-BackendLambdaStack.template.json
@@ -47,6 +47,9 @@
       "Arn"
      ]
     },
+    "Architectures": [
+     "arm64"
+    ],
     "FunctionName": "CLAppdevelopment-book-api-func",
     "Handler": "handle",
     "Runtime": "nodejs16.x"
@@ -124,6 +127,9 @@
       "Arn"
      ]
     },
+    "Architectures": [
+     "arm64"
+    ],
     "FunctionName": "CLAppdevelopment-user-api-func",
     "Handler": "handle",
     "Runtime": "nodejs16.x"
